# sampledrawer

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.rst  requirements.txt  resources.qrc  sampledrawer  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
icons/: index.theme
sample_drawer/: __init__.py  config.py  dsp.py  file_analyzer.py  filebrowser.py  library.py  library_verifier.py  lru_cache.py  lrucache.py  main.py  mainwindow.py  mainwindow.ui  metadata.py  metadatabrowser.py  sampleanalyzer.py  samplemetadata.py  sampleplayer.py  schema.sql  scratchpad.py  search.py  signalhandler.py  workplace.py
sample_drawer/audiodrivers/: __init__.py  driver.py  gstreamer.py  qt.py
sample_drawer/gui/: app.py  file_analyzer.py  file_browser.py  filebrowser.py  import_dialog.py  import_dialog.ui  lib_items.py  lib_tree.py  libraryitems.py  librarytree.py  log_window.py  log_window.ui  main_window.py  main_window.ui  mainwindow.py  mainwindow.ui  metadata_browser.py  player.py  sampleanalyzer.py  sampleplayer.py  scratchpad.py  signal_handler.py  signalhandler.py  waveform.py  workplace.py
tests/: make_test_db.sh  test_dsp.py  test_file_analyzer.py  test_library.py  test_lru_cache.py
tests/data/: .gitattributes
