[metadata]
name = Sample Drawer
version = attr: sample_drawer.__version__
description = Audio sample browser and organizer
url = https://github.com/Jajcus/sampledrawer/
author = Jacek Konieczny
author_email = jajcus@jajcus.net
long_description = file: README.rst, LICENSE
keywords = audio, sample
license = GPLv3
classifiers =
    Framework :: Django
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
package_dir =
    jajcus=
packages =
    jajcus.sample_drawer
    jajcus.sample_drawer.gui

[egg_info]
tag_build = dev

[options.entry_points]
console_scripts =
    sampledrawer=jajcus.sample_drawer.main:main
